--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "mathquill",
+  "name": "@edtr-io/mathquill",
   "description": "Easily type math in your webapp",
-  "version": "0.10.1",
+  "version": "0.11.0",
   "license": "MPL-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mathquill/mathquill.git"
+    "url": "https://github.com/edtr-io/mathquill.git"
   },
   "files": [
     "build/mathquill.{css,js,min.js}",
@@ -17,5 +17,8 @@
     "mocha": ">=2.4.1",
     "uglify-js": "2.x",
     "less": ">=1.5.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
